--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
+  background-image: url('https://www.w3schools.com/w3images/forestbridge.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
@@ -52,9 +52,6 @@ hr {
     <h1>COMING SOON</h1>
     <hr>
     <p>35 days left</p>
-  </div>
-  <div class="bottomleft">
-    <p>Some text</p>
   </div>
 </div>
 
