--- a/tutorial1.html
+++ b/tutorial1.html
@@ -548,9 +548,39 @@
               <label class="form-checkbox">
                 <input type="checkbox" checked>
                 <i class="form-icon"></i> <!-- What was the mean precipitation in July?-->
-                Total number of unemployment per year in agriculture and construction from 2000 to 2010
+                Total unemployment count per year in agriculture and construction from 2000 to 2010
               </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> This phrase accurately describes the content of the plot.</p>
+              <p class="explanation"><span style="color: #068a9c">*</span>  This is an accurate description of the plot which can be converted into a question by adding the question word "what" at the beginning.</p>
+              <label class="form-checkbox">
+                <input type="checkbox" checked>
+                <i class="form-icon"></i> <!-- Which month had the most rain? -->
+                Compare total unemployment count per year in agriculture and construction from 2000 to 2010
+              </label>
+              <p class="explanation"><span style="color: #068a9c">*</span> This is a valid description that starts with a verb.</p>
+              <label class="form-checkbox">
+                <input type="checkbox" checked>
+                <i class="form-icon"></i> <!-- Which month had the most rain? -->
+                Show me total unemployment count per year in agriculture and construction from 2000 to 2010
+              </label>
+              <p class="explanation"><span style="color: #068a9c">*</span> This is a valid description that starts with a verb.</p>
+              <label class="form-checkbox">
+                <input type="checkbox" checked>
+                <i class="form-icon"></i> <!-- Which month had the most rain? -->
+                What is the total unemployment count each year in agriculture and construction from 2000 to 2010?
+              </label>
+              <p class="explanation"><span style="color: #068a9c">*</span> The description is valid and it is a question.</p>
+              <label class="form-checkbox">
+                <input type="checkbox" checked>
+                <i class="form-icon"></i> <!-- Which month had the most rain? -->
+                Yearly unemployment count in agriculture and construction from 2000 to 2010
+              </label>
+              <p class="explanation"><span style="color: #068a9c">*</span> This a valid description despite the fact that it does not explicitly say "total" count.</p>
+              <label class="form-checkbox">
+                <input type="checkbox" checked>
+                <i class="form-icon"></i> <!-- Which month had the most rain? -->
+                Change of unemployment count by year in agriculture and construction from 2000 to 2010
+              </label>
+              <p class="explanation"><span style="color: #068a9c">*</span> This is a valid description despite the fact that it does not explicitly say "total" count.</p>
               <label class="form-checkbox">
                 <input type="checkbox">
                 <i class="form-icon"></i> <!-- What was the combined mean precipitation for the entire year?-->
@@ -564,36 +594,6 @@
               </label>
               <p class="explanation"><span class="text-error">*</span> Wrong time span.</p>
               <label class="form-checkbox">
-                <input type="checkbox" checked>
-                <i class="form-icon"></i> <!-- Which month had the most rain? -->
-                Compare total number of unemployment per year in agriculture and construction from 2000 to 2010
-              </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> This description is valid and it starts with a verb.</p>
-              <label class="form-checkbox">
-                <input type="checkbox" checked>
-                <i class="form-icon"></i> <!-- Which month had the most rain? -->
-                Show me total number of unemployment per year in agriculture and construction from 2000 to 2010
-              </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> This description is valid and it starts with a verb.</p>
-              <label class="form-checkbox">
-                <input type="checkbox" checked>
-                <i class="form-icon"></i> <!-- Which month had the most rain? -->
-                What are the total number of unemployment per year in agriculture and construction from 2000 to 2010?
-              </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> The description is valid and it is a question.</p>
-              <label class="form-checkbox">
-                <input type="checkbox" checked>
-                <i class="form-icon"></i> <!-- Which month had the most rain? -->
-                Yearly unemployment count in agriculture and construction from 2000 to 2010
-              </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> The description can be used as the plot caption (despite the fact that it does not explicitly say "total" count).</p>
-              <label class="form-checkbox">
-                <input type="checkbox" checked>
-                <i class="form-icon"></i> <!-- Which month had the most rain? -->
-                Change of unemployment count by year in agriculture and construction from 2000 to 2010
-              </label>
-              <p class="explanation"><span style="color: #068a9c">*</span> The description can be used as the plot caption (despite the fact that it does not explicitly say "total" count).</p>
-              <label class="form-checkbox">
                 <input type="checkbox">
                 <i class="form-icon"></i> <!-- Which month had the most rain? -->
                 Change of unemployment count by year in agriculture from 2000 to 2010
@@ -604,7 +604,7 @@
                 <i class="form-icon"></i> <!-- Which month had the most rain? -->
                 Change of unemployment count by year from 2000 to 2010
               </label>
-              <p class="explanation"><span class="text-error">*</span> The description is invalid since it does not specify which industr(ies) the unemployment count is from.</p>
+              <p class="explanation"><span class="text-error">*</span> The description is invalid since it does not specify which industr(ies) the unemployment counts are from.</p>
               <label class="form-checkbox">
                 <input type="checkbox">
                 <i class="form-icon"></i> <!-- Which month had the most rain? -->
@@ -785,7 +785,7 @@
     .form-panel {
       background-color: #f7f8f9;
       min-height: 100vh;
-      padding: 20px 0px 0px 20px;
+      padding: 20px 10px 0px 20px;
       right: 0px;
     }
 
