--- a/tutorial1.html
+++ b/tutorial1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>AQuA Tutorial</title>
+  <title>Visualization Descrition Tutorial</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta content="text/html;charset=UTF-8" http-equiv="Content-Type" />
