--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@ hr {
 <body>
 
 <div class="bgimg">
-  <div class="topleft">
-    <p>Logo</p>
-  </div>
   <div class="middle">
     <h1>COMING SOON</h1>
     <hr>
-    <p>35 days left</p>
+    <p>July 2020</p>
   </div>
 </div>
 
